Clean up for use with new module